--- a/تمارين_اليوم_الثاني.md
+++ b/تمارين_اليوم_الثاني.md
@@ -9,10 +9,18 @@ Endpoints :
 
 - Get all the customers
 - Add new customers
-- Update customers ( return bad request if index in invalid )
-- Delete customers ( return bad request status if index in invalid )
+- Update customers 
+- Delete customers 
 
-- Deposit money to customer  ( return bad request if index in invalid , return bad request i money is in the negative )
-- Withdraw money from customers ( return bad request if balance is less the the withdraw amount )
-- Transfer money from customer to another  ( return bad request if id of anthor customer is invalid , return bad request if balance is less the the transferable  amount)
-- Get customner balance ( return bad request if index in invalid )
+
+Create User management system where you can get all the Users , add , remove , update users
+
+MyUsers Class :
+ID , Username  , Email, Password, Role
+
+Endpoints :
+
+- Get all the Users
+- Add new Users
+- Update Users 
+- Delete Users 
