--- a/تمارين_اليوم_الثاني.md
+++ b/تمارين_اليوم_الثاني.md
@@ -13,6 +13,11 @@ Endpoints :
 - Delete customers 
 
 
+- Deposit money to customer 
+- Withdraw money from customers
+
+
+
 Create User management system where you can get all the Users , add , remove , update users
 
 MyUsers Class :
